--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -706,12 +706,12 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController title="Main" id="XfG-lQ-9wD" customClass="ViewController" customModule="Folder_Monitor" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" misplaced="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="260"/>
+                    <view key="view" id="m2S-Jp-Qdl">
+                        <rect key="frame" x="0.0" y="0.0" width="617" height="260"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OdP-IC-WqB">
-                                <rect key="frame" x="328" y="185" width="128" height="32"/>
+                                <rect key="frame" x="323" y="185" width="270" height="32"/>
                                 <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="JQ3-rM-onm">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -721,7 +721,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="bms-Hj-uoq">
-                                <rect key="frame" x="320" y="215" width="136" height="32"/>
+                                <rect key="frame" x="457" y="215" width="136" height="32"/>
                                 <buttonCell key="cell" type="push" title="Choose folder..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nLy-1X-hgG">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -738,15 +738,15 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMB-qL-TOZ" userLabel="Stack View Status">
-                                <rect key="frame" x="30" y="194" width="274" height="16"/>
+                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMB-qL-TOZ" userLabel="Stack View Status">
+                                <rect key="frame" x="30" y="194" width="269" height="16"/>
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7kM-6n-2BJ">
                                         <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="Check" id="vWz-zh-PSW"/>
                                     </imageView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2Mi-Hr-AaH">
-                                        <rect key="frame" x="24" y="0.0" width="252" height="16"/>
+                                        <rect key="frame" x="19" y="0.0" width="252" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="You haven't choose any folder to monitor" id="KWz-Gh-gFu">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -764,7 +764,7 @@
                                 </customSpacing>
                             </stackView>
                             <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LG0-av-GAj">
-                                <rect key="frame" x="75" y="222" width="235" height="21"/>
+                                <rect key="frame" x="75" y="222" width="372" height="21"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Folder path appears here" drawsBackground="YES" id="w4L-y0-TW7">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -772,49 +772,75 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t2v-Jc-y0r">
-                                <rect key="frame" x="28" y="168" width="34" height="16"/>
+                                <rect key="frame" x="28" y="163" width="34" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Logs" id="tkz-cn-2wV">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="r3T-tn-Q23" userLabel="Text Field Event">
-                                <rect key="frame" x="30" y="20" width="420" height="148"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="148" id="Kz4-36-w3H"/>
-                                </constraints>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Events happen here" drawsBackground="YES" id="Th3-ZA-eVt">
-                                    <font key="font" metaFont="smallSystem"/>
-                                    <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
+                            <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-NM-HJG">
+                                <rect key="frame" x="30" y="20" width="557" height="138"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="meg-T3-nhf">
+                                    <rect key="frame" x="1" y="1" width="540" height="136"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="W5m-u9-pLe">
+                                            <rect key="frame" x="0.0" y="0.0" width="540" height="136"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <size key="minSize" width="540" height="136"/>
+                                            <size key="maxSize" width="540" height="10000000"/>
+                                            <attributedString key="textStorage">
+                                                <fragment content="Events happen here">
+                                                    <attributes>
+                                                        <color key="NSColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                        <font key="NSFont" metaFont="smallSystem"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                        </textView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="kvE-n3-Vpl">
+                                    <rect key="frame" x="-100" y="-100" width="225" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zLN-rE-dZp">
+                                    <rect key="frame" x="541" y="1" width="15" height="136"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="r3T-tn-Q23" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="leading" id="2Gg-hd-ITc"/>
-                            <constraint firstItem="t2v-Jc-y0r" firstAttribute="bottom" secondItem="r3T-tn-Q23" secondAttribute="top" id="2wU-my-LkN"/>
-                            <constraint firstAttribute="bottom" secondItem="r3T-tn-Q23" secondAttribute="bottom" constant="20" symbolic="YES" id="3IR-94-Vet"/>
+                            <constraint firstAttribute="bottom" secondItem="8IV-NM-HJG" secondAttribute="bottom" constant="20" symbolic="YES" id="1Gx-EB-Hmk"/>
+                            <constraint firstItem="8IV-NM-HJG" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="leading" id="3pY-at-x3n"/>
                             <constraint firstItem="OdP-IC-WqB" firstAttribute="centerY" secondItem="YMB-qL-TOZ" secondAttribute="centerY" id="7Xg-xw-5op"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="top" secondItem="fFb-Jj-L6W" secondAttribute="top" constant="30" id="As5-BO-6on"/>
                             <constraint firstItem="bms-Hj-uoq" firstAttribute="leading" secondItem="LG0-av-GAj" secondAttribute="trailing" constant="16" id="Brs-ho-Elo"/>
                             <constraint firstItem="OdP-IC-WqB" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="trailing" constant="30" id="CNn-TZ-uEb"/>
                             <constraint firstItem="LG0-av-GAj" firstAttribute="centerY" secondItem="fFb-Jj-L6W" secondAttribute="centerY" id="EZw-Wg-uli"/>
                             <constraint firstItem="OdP-IC-WqB" firstAttribute="trailing" secondItem="bms-Hj-uoq" secondAttribute="trailing" id="EoS-ul-Pgz"/>
+                            <constraint firstItem="8IV-NM-HJG" firstAttribute="trailing" secondItem="OdP-IC-WqB" secondAttribute="trailing" id="L5x-MG-aHh"/>
                             <constraint firstItem="bms-Hj-uoq" firstAttribute="centerY" secondItem="LG0-av-GAj" secondAttribute="centerY" id="N4m-OU-Iub"/>
                             <constraint firstItem="LG0-av-GAj" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="trailing" constant="5" id="SXG-px-EC3"/>
-                            <constraint firstItem="r3T-tn-Q23" firstAttribute="trailing" secondItem="OdP-IC-WqB" secondAttribute="trailing" id="amU-iZ-Pcq"/>
                             <constraint firstItem="t2v-Jc-y0r" firstAttribute="leading" secondItem="YMB-qL-TOZ" secondAttribute="leading" id="iNX-87-bQP"/>
+                            <constraint firstItem="8IV-NM-HJG" firstAttribute="top" secondItem="t2v-Jc-y0r" secondAttribute="bottom" constant="5" id="pcE-Ap-ero"/>
                             <constraint firstItem="fFb-Jj-L6W" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="qg2-kj-Ppu"/>
-                            <constraint firstItem="t2v-Jc-y0r" firstAttribute="top" secondItem="YMB-qL-TOZ" secondAttribute="bottom" constant="10" id="s2i-Qs-ePT"/>
+                            <constraint firstItem="t2v-Jc-y0r" firstAttribute="top" secondItem="YMB-qL-TOZ" secondAttribute="bottom" constant="15" id="s2i-Qs-ePT"/>
                             <constraint firstItem="YMB-qL-TOZ" firstAttribute="leading" secondItem="fFb-Jj-L6W" secondAttribute="leading" id="vie-ea-Flc"/>
                             <constraint firstItem="fFb-Jj-L6W" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="30" id="xxE-5B-qZu"/>
                             <constraint firstAttribute="trailing" secondItem="bms-Hj-uoq" secondAttribute="trailing" constant="30" id="yYD-B3-uRw"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="btnBrowserFolder" destination="bms-Hj-uoq" id="wPv-Ph-AMN"/>
                         <outlet property="btnMonitor" destination="OdP-IC-WqB" id="MOC-8b-aio"/>
                         <outlet property="txtFolderPath" destination="LG0-av-GAj" id="ycj-u1-bHT"/>
+                        <outlet property="txtLogs" destination="W5m-u9-pLe" id="q3a-7u-S38"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
