--- a/Folder Monitor/Base.lproj/Main.storyboard
+++ b/Folder Monitor/Base.lproj/Main.storyboard
@@ -708,24 +708,24 @@
             <objects>
                 <viewController title="Main" id="XfG-lQ-9wD" customClass="ViewController" customModule="Folder_Monitor" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="528" height="260"/>
+                        <rect key="frame" x="0.0" y="0.0" width="536" height="260"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OdP-IC-WqB">
-                                <rect key="frame" x="383" y="185" width="121" height="32"/>
+                                <rect key="frame" x="400" y="185" width="112" height="32"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="idA-DD-uSc"/>
+                                    <constraint firstAttribute="width" constant="100" id="idA-DD-uSc"/>
                                 </constraints>
                                 <buttonCell key="cell" type="push" title="START" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="JQ3-rM-onm">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
+                                    <font key="font" metaFont="systemSemibold" size="13"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="monitorProcess:" target="XfG-lQ-9wD" id="CgI-oO-AQo"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="bms-Hj-uoq">
-                                <rect key="frame" x="368" y="215" width="136" height="32"/>
+                                <rect key="frame" x="376" y="215" width="136" height="32"/>
                                 <buttonCell key="cell" type="push" title="Choose folder..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nLy-1X-hgG">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -742,15 +742,15 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMB-qL-TOZ" userLabel="Stack View Status">
-                                <rect key="frame" x="30" y="194" width="269" height="16"/>
+                            <stackView distribution="fillProportionally" orientation="horizontal" alignment="top" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMB-qL-TOZ" userLabel="Stack View Status">
+                                <rect key="frame" x="30" y="194" width="286" height="16"/>
                                 <subviews>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7kM-6n-2BJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
+                                    <imageView verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7kM-6n-2BJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="17" height="16"/>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="Warning" id="vWz-zh-PSW"/>
                                     </imageView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2Mi-Hr-AaH">
-                                        <rect key="frame" x="19" y="0.0" width="252" height="16"/>
+                                        <rect key="frame" x="20" y="0.0" width="268" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="You haven't choose any folder to monitor" id="KWz-Gh-gFu">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -768,7 +768,7 @@
                                 </customSpacing>
                             </stackView>
                             <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LG0-av-GAj">
-                                <rect key="frame" x="75" y="222" width="283" height="21"/>
+                                <rect key="frame" x="75" y="222" width="291" height="21"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Folder path appears here" drawsBackground="YES" id="w4L-y0-TW7">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -784,20 +784,20 @@
                                 </textFieldCell>
                             </textField>
                             <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-NM-HJG">
-                                <rect key="frame" x="30" y="20" width="468" height="138"/>
+                                <rect key="frame" x="30" y="20" width="476" height="138"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="meg-T3-nhf">
-                                    <rect key="frame" x="1" y="1" width="451" height="136"/>
+                                    <rect key="frame" x="1" y="1" width="459" height="136"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="W5m-u9-pLe">
-                                            <rect key="frame" x="0.0" y="0.0" width="451" height="136"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="459" height="136"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="451" height="136"/>
-                                            <size key="maxSize" width="557" height="10000000"/>
+                                            <size key="minSize" width="459" height="136"/>
+                                            <size key="maxSize" width="563" height="10000000"/>
                                             <attributedString key="textStorage">
-                                                <fragment content="Whenever you add or remove PDFs, it will be logged here.">
+                                                <fragment content="Whenever you add PDFs, it will be logged here.">
                                                     <attributes>
                                                         <color key="NSColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                         <font key="NSFont" metaFont="smallSystem"/>
@@ -814,7 +814,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zLN-rE-dZp">
-                                    <rect key="frame" x="452" y="1" width="15" height="136"/>
+                                    <rect key="frame" x="460" y="1" width="15" height="136"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -852,7 +852,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="656"/>
+            <point key="canvasLocation" x="34" y="656"/>
         </scene>
     </scenes>
     <resources>
